force-app/main/default/objects/Holder_Testing_Translation__c/Holder_Testing_Translation__c.object-meta.xml
<CustomObject>
    <label>Holder Testing Translation</label>
    <nameField>
        <label>Holder Testing Translation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holder Testing Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>