force-app/main/default/objects/Holder_Testing_Translation__c/fields/Text4__c.field-meta.xml
<CustomField>
    <fullName>Text4__c</fullName>
    <label>Text4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>