force-app/main/default/objects/Holder_Testing_Translation__c/fields/Text5__c.field-meta.xml
<CustomField>
    <fullName>Text5__c</fullName>
    <label>Text5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>